--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <footer>
 
             <div class="logo-footer">
-                <img src="img/logo.png" alt="logo" class="logo-img">
+                <img src="https://static.rfstat.com/renderforest/images/v2/landing-pics/logo_landing/f3.png" alt="logo" class="logo-img">
                 <span class="copyright">&copy; 2019</span>
             </div>
             <div class="footer_call">
