--- a/stretching.html
+++ b/stretching.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:400,600,700&amp;subset=cyrillic" rel="stylesheet">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/icomoon.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://github.com/Ilya-Nahorny/Ilya-Nahorny.github.io/tree/master/CSS/normalize.css">
+    <link rel="stylesheet" href="https://github.com/Ilya-Nahorny/Ilya-Nahorny.github.io/tree/master/CSS/icomoon.css">
+    <link rel="stylesheet" href="https://github.com/Ilya-Nahorny/Ilya-Nahorny.github.io/tree/master/CSS/style.css">
 
     <script src="js/jquery.js"></script>
     <script src="js/burger-menu.js"></script>
