--- a/stretching.html
+++ b/stretching.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://github.com/Ilya-Nahorny/Ilya-Nahorny.github.io/tree/master/CSS/icomoon.css">
     <link rel="stylesheet" href="https://github.com/Ilya-Nahorny/Ilya-Nahorny.github.io/tree/master/CSS/style.css">
 
-    <script src="js/jquery.js"></script>
-    <script src="js/burger-menu.js"></script>
+    <script src="https://github.com/Ilya-Nahorny/Ilya-Nahorny.github.io/tree/master/js/jquery.js"></script>
+    <script src="https://github.com/Ilya-Nahorny/Ilya-Nahorny.github.io/tree/master/js/burger-menu.js"></script>
 
     <title>Стретчинг</title>
 
