--- a/stretching.html
+++ b/stretching.html
@@ -31,7 +31,7 @@
             <div class="main-overlay"></div>
             <header>
                 <div class="logo">
-                    <img src="img/logo.png" alt="logo" class="logo-img">
+                    <img src="https://github.com/Ilya-Nahorny/Ilya-Nahorny.github.io/tree/master/img/logo.png" alt="logo" class="logo-img">
                     <span class="pro-move">PRO- <br> движение</span>
                 </div>
                 <a href="#" class="m-menu-link">
@@ -73,7 +73,7 @@
             <footer>
             
                     <div class="logo-footer">
-                        <img src="img/logo.png" alt="logo" class="logo-img">
+                        <img src="https://github.com/Ilya-Nahorny/Ilya-Nahorny.github.io/tree/master/img/logo.png" alt="logo" class="logo-img">
                         <span class="copyright">&copy;  2019</span>
                 </div>
                 <div class="footer_call">
