--- a/stretching.html
+++ b/stretching.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:400,600,700&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="https://github.com/Ilya-Nahorny/Ilya-Nahorny.github.io/tree/master/CSS/normalize.css">
-    <link rel="stylesheet" href="https://github.com/Ilya-Nahorny/Ilya-Nahorny.github.io/tree/master/CSS/icomoon.css">
-    <link rel="stylesheet" href="https://github.com/Ilya-Nahorny/Ilya-Nahorny.github.io/tree/master/CSS/style.css">
+    <link rel="stylesheet" href="https://github.com/Ilya-Nahorny/Ilya-Nahorny.github.io/blob/master/CSS/ICOMOON.CSS">
+    <link rel="stylesheet" href="https://github.com/Ilya-Nahorny/Ilya-Nahorny.github.io/blob/master/CSS/style.css">
 
-    <script src="https://github.com/Ilya-Nahorny/Ilya-Nahorny.github.io/tree/master/js/jquery.js"></script>
-    <script src="https://github.com/Ilya-Nahorny/Ilya-Nahorny.github.io/tree/master/js/burger-menu.js"></script>
+    <script src="https://github.com/Ilya-Nahorny/Ilya-Nahorny.github.io/blob/master/JS/JQUERY.JS"></script>
+    <script src="https://github.com/Ilya-Nahorny/Ilya-Nahorny.github.io/blob/master/JS/burger-menu.js"></script>
 
     <title>Стретчинг</title>
 
@@ -31,7 +31,7 @@
             <div class="main-overlay"></div>
             <header>
                 <div class="logo">
-                    <img src="https://github.com/Ilya-Nahorny/Ilya-Nahorny.github.io/tree/master/img/logo.png" alt="logo" class="logo-img">
+                    <img src="https://github.com/Ilya-Nahorny/Ilya-Nahorny.github.io/blob/master/img/logo.png" alt="logo" class="logo-img">
                     <span class="pro-move">PRO- <br> движение</span>
                 </div>
                 <a href="#" class="m-menu-link">
@@ -73,7 +73,7 @@
             <footer>
             
                     <div class="logo-footer">
-                        <img src="https://github.com/Ilya-Nahorny/Ilya-Nahorny.github.io/tree/master/img/logo.png" alt="logo" class="logo-img">
+                        <img src="https://github.com/Ilya-Nahorny/Ilya-Nahorny.github.io/blob/master/img/logo.png" alt="logo" class="logo-img">
                         <span class="copyright">&copy;  2019</span>
                 </div>
                 <div class="footer_call">
