--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:400,600,700&amp;subset=cyrillic" rel="stylesheet">
-    <link rel="stylesheet" href="https://ilya-nahorny.github.io/css/normalize.css">
-    <link rel="stylesheet" href="https://ilya-nahorny.github.io/css/icomoon.css">
-    <link rel="stylesheet" href="https://ilya-nahorny.github.io/css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/icomoon.css">
+    <link rel="stylesheet" href="css/style.css">
 
-    <script src="https://ilya-nahorny.github.io/js/jquery.js"></script>
-    <script src="https://ilya-nahorny.github.io/js/burger-menu.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/burger-menu.js"></script>
 
 
-    <link rel="stylesheet" href="https://ilya-nahorny.github.io/js/slick/slick.css">
-    <link rel="stylesheet" href="https://ilya-nahorny.github.io/js/slick/slick-theme.css">
+    <link rel="stylesheet" href="js/slick/slick.css">
+    <link rel="stylesheet" href="js/slick/slick-theme.css">
 
     <title>index</title>
 
@@ -39,7 +39,7 @@
             <div class="main-overlay"></div>
             <header>
                 <div class="logo">
-                    <img src="https://ilya-nahorny.github.io/img/logo.png" alt="logo" class="logo-img">
+                    <img src="img/LOGO.png" alt="logo" class="logo-img">
                     <span class="pro-move">PRO- <br> движение</span>
                 </div>
                 <a href="#" class="m-menu-link">
@@ -72,7 +72,7 @@
 
             <div class="main-directions">
                 <article class="pop-classes">
-                    <a href="pilates.html" class="dark-img"><img src="https://ilya-nahorny.github.io/img/fit9.png" alt="fit"></a>
+                    <a href="pilates.html" class="dark-img"><img src="img/fit9.png" alt="fit"></a>
                     <span>класс</span>
                     <h4>пилатес</h4>
                     <p>Cтройное гибкое тело с отличной координацией. Подтягивает живот , выравнивает осанку и избавляет
@@ -80,14 +80,14 @@
                     <a href="pilates.html" class="read-more_btn">узнать больше</a>
                 </article>
                 <article class="pop-classes">
-                    <a href="fit-strong.html" class="dark-img"><img src="https://ilya-nahorny.github.io/img/fit8.png" alt="fit"></a>
+                    <a href="fit-strong.html" class="dark-img"><img src="img/fit8.png" alt="fit"></a>
                     <span>класс</span>
                     <h4>силовой фитнес</h4>
                     <p>Силовой тренинг - самый эффективный инструмент корректировки массы тела... </p>
                     <a href="fit-strong.html" class="read-more_btn">узнать больше</a>
                 </article>
                 <article class="pop-classes">
-                    <a href="yoga.html" class="dark-img"><img src="https://ilya-nahorny.github.io/img/fit6.png" alt="fit"></a>
+                    <a href="yoga.html" class="dark-img"><img src="img/fit6.png" alt="fit"></a>
                     <span>класс</span>
                     <h4>Фитнес-йога</h4>
                     <p>Это синтез двух направлений — фитнеса и йоги, более доступный для людей всех возрастов и уровней
@@ -139,7 +139,7 @@
         <footer>
 
             <div class="logo-footer">
-                <img src="https://ilya-nahorny.github.io/IMG/logo.png" alt="logo" class="logo-img">
+                <img src="https://static.rfstat.com/renderforest/images/v2/landing-pics/logo_landing/f3.png" alt="logo" class="logo-img">
                 <span class="copyright">&copy; 2019</span>
             </div>
             <div class="footer_call">
@@ -155,8 +155,8 @@
         </footer>
 
     </div>
-    <script src="https://ilya-nahorny.github.io/js/slick/slick.min.js"></script>
-    <script src="https://ilya-nahorny.github.io/js/slick-slider.js"></script>
+    <script src="js/slick/slick.min.js"></script>
+    <script src="js/slick-slider.js"></script>
 
 </body>
 
