--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="main-overlay"></div>
             <header>
                 <div class="logo">
-                    <img src="../../img/LOGO.png" alt="logo" class="logo-img">
+                    <img src="ilya-nahorny.github.io/img/LOGO.png" alt="logo" class="logo-img">
                     <span class="pro-move">PRO- <br> движение</span>
                 </div>
                 <a href="#" class="m-menu-link">
