--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:400,600,700&amp;subset=cyrillic" rel="stylesheet">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/icomoon.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="Ilya-Nahorny.github.io/css/normalize.css">
+    <link rel="stylesheet" href="Ilya-Nahorny.github.io/css/icomoon.css">
+    <link rel="stylesheet" href="Ilya-Nahorny.github.io/css/style.css">
 
-    <script src="js/jquery.js"></script>
-    <script src="js/burger-menu.js"></script>
+    <script src="Ilya-Nahorny.github.io/js/jquery.js"></script>
+    <script src="Ilya-Nahorny.github.io/js/burger-menu.js"></script>
 
 
-    <link rel="stylesheet" href="js/slick/slick.css">
-    <link rel="stylesheet" href="js/slick/slick-theme.css">
+    <link rel="stylesheet" href="Ilya-Nahorny.github.io/js/slick/slick.css">
+    <link rel="stylesheet" href="Ilya-Nahorny.github.io/js/slick/slick-theme.css">
 
     <title>index</title>
 
