--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:400,600,700&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="Ilya-Nahorny.github.io/css/normalize.css">
-    <link rel="stylesheet" href="Ilya-Nahorny.github.io/css/icomoon.css">
+    <link rel="stylesheet" href="Ilya-Nahorny.github.io/CSS/ICOMOON.CSS">
     <link rel="stylesheet" href="Ilya-Nahorny.github.io/css/style.css">
 
     <script src="Ilya-Nahorny.github.io/js/jquery.js"></script>
