--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:400,600,700&amp;subset=cyrillic" rel="stylesheet">
-    <link rel="stylesheet" href="Ilya-Nahorny.github.io/css/normalize.css">
+    <link rel="stylesheet" href="Ilya-Nahorny.github.io/CSS/normalize.css">
     <link rel="stylesheet" href="Ilya-Nahorny.github.io/CSS/ICOMOON.CSS">
-    <link rel="stylesheet" href="Ilya-Nahorny.github.io/css/style.css">
+    <link rel="stylesheet" href="Ilya-Nahorny.github.io/CSS/STYLE.CSS">
 
     <script src="Ilya-Nahorny.github.io/js/jquery.js"></script>
     <script src="Ilya-Nahorny.github.io/js/burger-menu.js"></script>
