--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="Ilya-Nahorny.github.io/CSS/ICOMOON.CSS">
     <link rel="stylesheet" href="Ilya-Nahorny.github.io/CSS/STYLE.CSS">
 
-    <script src="Ilya-Nahorny.github.io/js/jquery.js"></script>
-    <script src="Ilya-Nahorny.github.io/js/burger-menu.js"></script>
+    <script src="Ilya-Nahorny.github.io/JS/jquery.js"></script>
+    <script src="Ilya-Nahorny.github.io/JS/burger-menu.js"></script>
 
 
-    <link rel="stylesheet" href="Ilya-Nahorny.github.io/js/slick/slick.css">
-    <link rel="stylesheet" href="Ilya-Nahorny.github.io/js/slick/slick-theme.css">
+    <link rel="stylesheet" href="Ilya-Nahorny.github.io/JS/slick/slick.css">
+    <link rel="stylesheet" href="Ilya-Nahorny.github.io/JS/slick/slick-theme.css">
 
     <title>index</title>
 
@@ -72,7 +72,7 @@
 
             <div class="main-directions">
                 <article class="pop-classes">
-                    <a href="pilates.html" class="dark-img"><img src="img/fit9.png" alt="fit"></a>
+                    <a href="pilates.html" class="dark-img"><img src="Ilya-Nahorny.github.io/IMG/FIT9.PNG" alt="fit"></a>
                     <span>класс</span>
                     <h4>пилатес</h4>
                     <p>Cтройное гибкое тело с отличной координацией. Подтягивает живот , выравнивает осанку и избавляет
