--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <a href="pilates.html" class="read-more_btn">узнать больше</a>
                 </article>
                 <article class="pop-classes">
-                    <a href="fit-strong.html" class="dark-img"><img src="Ilya-Nahorny.github.io/IMG/fit8.png" alt="fit"></a>
+                    <a href="fit-strong.html" class="dark-img"><img src="Ilya-Nahorny.github.io/IMG/FIT8.PNG" alt="fit"></a>
                     <span>класс</span>
                     <h4>силовой фитнес</h4>
                     <p>Силовой тренинг - самый эффективный инструмент корректировки массы тела... </p>
