--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <a href="fit-strong.html" class="read-more_btn">узнать больше</a>
                 </article>
                 <article class="pop-classes">
-                    <a href="yoga.html" class="dark-img"><img src="img/fit6.png" alt="fit"></a>
+                    <a href="yoga.html" class="dark-img"><img src="Ilya-Nahorny.github.io/IMG/FIT6.PNG" alt="fit"></a>
                     <span>класс</span>
                     <h4>Фитнес-йога</h4>
                     <p>Это синтез двух направлений — фитнеса и йоги, более доступный для людей всех возрастов и уровней
@@ -139,7 +139,7 @@
         <footer>
 
             <div class="logo-footer">
-                <img src="https://static.rfstat.com/renderforest/images/v2/landing-pics/logo_landing/f3.png" alt="logo" class="logo-img">
+                <img src="Ilya-Nahorny.github.io/IMG/LOGO.PNG" alt="logo" class="logo-img">
                 <span class="copyright">&copy; 2019</span>
             </div>
             <div class="footer_call">
@@ -155,8 +155,8 @@
         </footer>
 
     </div>
-    <script src="js/slick/slick.min.js"></script>
-    <script src="js/slick-slider.js"></script>
+    <script src="Ilya-Nahorny.github.io/JS/slick/slick.min.js"></script>
+    <script src="Ilya-Nahorny.github.io/JS/slick-slider.js"></script>
 
 </body>
 
