--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="Ilya-Nahorny.github.io/CSS/ICOMOON.CSS">
     <link rel="stylesheet" href="Ilya-Nahorny.github.io/CSS/STYLE.CSS">
 
-    <script src="Ilya-Nahorny.github.io/JS/jquery.js"></script>
+    <script src="Ilya-Nahorny.github.io/JS/JQUERY.JS "></script>
     <script src="Ilya-Nahorny.github.io/JS/burger-menu.js"></script>
 
 
