--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <script src="Ilya-Nahorny.github.io/JS/burger-menu.js"></script>
 
 
-    <link rel="stylesheet" href="Ilya-Nahorny.github.io/JS/slick/slick.css">
-    <link rel="stylesheet" href="Ilya-Nahorny.github.io/JS/slick/slick-theme.css">
+    <link rel="stylesheet" href="Ilya-Nahorny.github.io/JS/SLICK/SLICK.CSS">
+    <link rel="stylesheet" href="Ilya-Nahorny.github.io/JS/SLICK/slick-theme.css">
 
     <title>index</title>
 
