--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
         </footer>
 
     </div>
-    <script src="Ilya-Nahorny.github.io/JS/slick/slick.min.js"></script>
-    <script src="Ilya-Nahorny.github.io/JS/slick-slider.js"></script>
+    <script src="Ilya-Nahorny.github.io/JS/SLICK/slick.min.js"></script>
+    <script src="Ilya-Nahorny.github.io/JS/slick-slider.js "></script>
 
 </body>
 
