--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li><a href="grafik.html" class="menu_link">Расписание</a></li>
                 <li><a href="food.html" class="menu_link">Рацион</a></li>
                 <li><a href="gallery.html" class="menu_link">Галерея</a></li>
-                <li><a href="contacts.html" class="menu_link">Контакты</a></li>
+                <li><a href="Contacts.html" class="menu_link">Контакты</a></li>
             </ul>
         </nav>
         <div class="main">
@@ -53,7 +53,7 @@
                             <li><a href="grafik.html" class="menu_link">Расписание</a></li>
                             <li><a href="food.html" class="menu_link">Рацион</a></li>
                             <li><a href="gallery.html" class="menu_link">Галерея</a></li>
-                            <li><a href="contacts.html" class="menu_link">Контакты</a></li>
+                            <li><a href="Contacts.html" class="menu_link">Контакты</a></li>
                         </ul>
                     </nav>
                 </div>
