--- a/all_classes.html
+++ b/all_classes.html
@@ -72,42 +72,42 @@
 
         <div class="main-directions">
         <article class="pop-classes">
-                <a href="pilates.html" class="dark-img"><img src="img/fit9.png" alt="fit"></a>
+                <a href="pilates.html" class="dark-img"><img src="IMG/FIT9.PNG" alt="fit"></a>
                 <span>класс</span>
                 <h4>пилатес</h4>
                 <p>Cтройное гибкое тело с отличной координацией. Подтягивает живот , выравнивает осанку и избавляет от болей в спине, опускает плечи и удлиняет шею... </p>
                 <a href="pilates.html" class="read-more_btn">узнать больше</a>
             </article>
             <article class="pop-classes">
-                <a href="fit-strong.html" class="dark-img"><img src="img/fit8.png" alt="fit"></a>
+                <a href="fit-strong.html" class="dark-img"><img src="IMG/FIT8.PNG" alt="fit"></a>
                 <span>класс</span>
                 <h4>силовой фитнес</h4>
                 <p>Силовой тренинг - самый эффективный инструмент корректировки массы тела... </p>
                 <a href="fit-strong.html" class="read-more_btn">узнать больше</a>
             </article>
             <article class="pop-classes">
-                <a href="yoga.html" class="dark-img"><img src="img/fit6.png" alt="fit"></a>
+                <a href="yoga.html" class="dark-img"><img src="IMG/FIT6.PNG" alt="fit"></a>
                 <span>класс</span>
                 <h4>Фитнес-йога</h4>
                 <p>Это синтез двух направлений — фитнеса и йоги, более доступный для людей всех возрастов и уровней подготовки... </p>
                 <a href="yoga.html" class="read-more_btn">узнать больше</a>
             </article>
             <article class="pop-classes">
-                <a href="break-dance.html" class="dark-img"><img src="img/bboy.png" alt="fit"></a>
+                <a href="break-dance.html" class="dark-img"><img src="IMG/BBOY.PNG" alt="fit"></a>
                 <span>класс</span>
                 <h4>Брейк-данс</h4>
                 <p> Брейк-данс - это свобода и возможность творчества, поэтому дети, чья фантазия еще не зажата никакими рамками, его просто обожают... </p>
                 <a href="break-dance.html" class="read-more_btn">узнать больше</a>
             </article>
             <article class="pop-classes">
-                <a href="stretching.html" class="dark-img"><img src="img/fit14.png" alt="fit"></a>
+                <a href="stretching.html" class="dark-img"><img src="IMG/FIT14.PNG" alt="fit"></a>
                 <span>класс</span>
                 <h4>стретчинг</h4>
                 <p>Для гибкости, снижения стресса, идеальной осанки и ускорения метаболизма, против отложения солей и целлюлита – все это под силу стретчингу... </p>
                 <a href="stretching.html" class="read-more_btn">узнать больше</a>
             </article>
             <article class="pop-classes">
-                <a href="strip.html" class="dark-img"><img src="img/fit15.png" alt="fit"></a>
+                <a href="strip.html" class="dark-img"><img src="IMG/FIT15.PNG" alt="fit"></a>
                 <span>класс</span>
                 <h4>стрип пластика</h4>
                 <p>Не подразумевает обнажения, но помогает обрести уверенность в себе, раскрепощенность, раскованность в движениях, мягкость, пластичность, сексуальность... </p>
