--- a/all_classes.html
+++ b/all_classes.html
@@ -16,7 +16,10 @@
     <link rel="stylesheet" href="Ilya-Nahorny.github.io/JS/SLICK/SLICK.CSS">
     <link rel="stylesheet" href="Ilya-Nahorny.github.io/JS/SLICK/slick-theme.css">
 
-    <title>index</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
+    <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+
+    <title>FAQ</title>
 
 </head>
 
