--- a/all_classes.html
+++ b/all_classes.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:400,600,700&amp;subset=cyrillic" rel="stylesheet">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/icomoon.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="Ilya-Nahorny.github.io/CSS/normalize.css">
+    <link rel="stylesheet" href="Ilya-Nahorny.github.io/CSS/ICOMOON.CSS">
+    <link rel="stylesheet" href="Ilya-Nahorny.github.io/CSS/STYLE.CSS">
 
-    <script src="js/jquery.js"></script>
-    <script src="js/burger-menu.js"></script>
+    <script src="Ilya-Nahorny.github.io/JS/JQUERY.JS "></script>
+    <script src="Ilya-Nahorny.github.io/JS/burger-menu.js"></script>
 
 
-    <link rel="stylesheet" href="js/slick/slick.css">
-    <link rel="stylesheet" href="js/slick/slick-theme.css">
+    <link rel="stylesheet" href="Ilya-Nahorny.github.io/JS/SLICK/SLICK.CSS">
+    <link rel="stylesheet" href="Ilya-Nahorny.github.io/JS/SLICK/slick-theme.css">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
     <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
@@ -35,14 +35,14 @@
                 <li><a href="grafik.html" class="menu_link">Расписание</a></li>
                 <li><a href="food.html" class="menu_link">Рацион</a></li>
                 <li><a href="gallery.html" class="menu_link">Галерея</a></li>
-                <li><a href="contacts.html" class="menu_link">Контакты</a></li>
+                <li><a href="Contacts.html" class="menu_link">Контакты</a></li>
             </ul>
         </nav>
         <div class="main">
             <div class="main-overlay"></div>
             <header>
                 <div class="logo">
-                    <img src="img/LOGO.png" alt="logo" class="logo-img">
+                    <img src="Ilya-Nahorny.github.io/IMG/LOGO.PNG" alt="logo" class="logo-img">
                     <span class="pro-move">PRO- <br> движение</span>
                 </div>
                 <a href="#" class="m-menu-link">
@@ -56,12 +56,11 @@
                             <li><a href="grafik.html" class="menu_link">Расписание</a></li>
                             <li><a href="food.html" class="menu_link">Рацион</a></li>
                             <li><a href="gallery.html" class="menu_link">Галерея</a></li>
-                            <li><a href="contacts.html" class="menu_link">Контакты</a></li>
+                            <li><a href="Contacts.html" class="menu_link">Контакты</a></li>
                         </ul>
                     </nav>
                 </div>
             </header>
-
         <article class="main-text">
                 <span>кто мы</span>
                 <h1>FAQ</h1>
@@ -195,7 +194,7 @@
 <footer>
 
     <div class="logo-footer">
-        <img src="img/LOGO.png" alt="logo" class="logo-img">
+        <img src="Ilya-Nahorny.github.io/IMG/LOGO.PNG" alt="logo" class="logo-img">
         <span class="copyright">&copy; 2019</span>
     </div>
     <div class="footer_call">
@@ -211,8 +210,8 @@
 </footer>
 
 </div>
-<script src="js/slick/slick.min.js"></script>
-<script src="js/slick-slider.js"></script>
+<script src="Ilya-Nahorny.github.io/JS/SLICK/slick.min.js"></script>
+<script src="Ilya-Nahorny.github.io/JS/slick-slider.js "></script>
 
 </body>
 
