--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:400,600,700&amp;subset=cyrillic" rel="stylesheet">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/icomoon.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="Ilya-Nahorny.github.io/CSS/normalize.css">
+    <link rel="stylesheet" href="Ilya-Nahorny.github.io/CSS/ICOMOON.CSS">
+    <link rel="stylesheet" href="Ilya-Nahorny.github.io/CSS/STYLE.CSS">
 
-    <script src="js/jquery.js"></script>
-    <script src="js/burger-menu.js"></script>
+    <script src="Ilya-Nahorny.github.io/JS/JQUERY.JS "></script>
+    <script src="Ilya-Nahorny.github.io/JS/burger-menu.js"></script>
 
 
-    <link rel="stylesheet" href="js/slick/slick.css">
-    <link rel="stylesheet" href="js/slick/slick-theme.css">
+    <link rel="stylesheet" href="Ilya-Nahorny.github.io/JS/SLICK/SLICK.CSS">
+    <link rel="stylesheet" href="Ilya-Nahorny.github.io/JS/SLICK/slick-theme.css">
 
     <title>index</title>
 
@@ -32,14 +32,14 @@
                 <li><a href="grafik.html" class="menu_link">Расписание</a></li>
                 <li><a href="food.html" class="menu_link">Рацион</a></li>
                 <li><a href="gallery.html" class="menu_link">Галерея</a></li>
-                <li><a href="contacts.html" class="menu_link">Контакты</a></li>
+                <li><a href="Contacts.html" class="menu_link">Контакты</a></li>
             </ul>
         </nav>
         <div class="main">
             <div class="main-overlay"></div>
             <header>
                 <div class="logo">
-                    <img src="img/LOGO.png" alt="logo" class="logo-img">
+                    <img src="Ilya-Nahorny.github.io/IMG/LOGO.PNG" alt="logo" class="logo-img">
                     <span class="pro-move">PRO- <br> движение</span>
                 </div>
                 <a href="#" class="m-menu-link">
@@ -53,7 +53,7 @@
                             <li><a href="grafik.html" class="menu_link">Расписание</a></li>
                             <li><a href="food.html" class="menu_link">Рацион</a></li>
                             <li><a href="gallery.html" class="menu_link">Галерея</a></li>
-                            <li><a href="contacts.html" class="menu_link">Контакты</a></li>
+                            <li><a href="Contacts.html" class="menu_link">Контакты</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -72,7 +72,7 @@
 
             <div class="main-directions">
                 <article class="pop-classes">
-                    <a href="pilates.html" class="dark-img"><img src="img/fit9.png" alt="fit"></a>
+                    <a href="pilates.html" class="dark-img"><img src="Ilya-Nahorny.github.io/IMG/FIT9.PNG" alt="fit"></a>
                     <span>класс</span>
                     <h4>пилатес</h4>
                     <p>Cтройное гибкое тело с отличной координацией. Подтягивает живот , выравнивает осанку и избавляет
@@ -80,14 +80,14 @@
                     <a href="pilates.html" class="read-more_btn">узнать больше</a>
                 </article>
                 <article class="pop-classes">
-                    <a href="fit-strong.html" class="dark-img"><img src="img/fit8.png" alt="fit"></a>
+                    <a href="fit-strong.html" class="dark-img"><img src="Ilya-Nahorny.github.io/IMG/FIT8.PNG" alt="fit"></a>
                     <span>класс</span>
                     <h4>силовой фитнес</h4>
                     <p>Силовой тренинг - самый эффективный инструмент корректировки массы тела... </p>
                     <a href="fit-strong.html" class="read-more_btn">узнать больше</a>
                 </article>
                 <article class="pop-classes">
-                    <a href="yoga.html" class="dark-img"><img src="img/fit6.png" alt="fit"></a>
+                    <a href="yoga.html" class="dark-img"><img src="Ilya-Nahorny.github.io/IMG/FIT6.PNG" alt="fit"></a>
                     <span>класс</span>
                     <h4>Фитнес-йога</h4>
                     <p>Это синтез двух направлений — фитнеса и йоги, более доступный для людей всех возрастов и уровней
@@ -139,7 +139,7 @@
         <footer>
 
             <div class="logo-footer">
-                <img src="img/LOGO.png" alt="logo" class="logo-img">
+                <img src="Ilya-Nahorny.github.io/IMG/LOGO.PNG" alt="logo" class="logo-img">
                 <span class="copyright">&copy; 2019</span>
             </div>
             <div class="footer_call">
@@ -155,8 +155,8 @@
         </footer>
 
     </div>
-    <script src="js/slick/slick.min.js"></script>
-    <script src="js/slick-slider.js"></script>
+    <script src="Ilya-Nahorny.github.io/JS/SLICK/slick.min.js"></script>
+    <script src="Ilya-Nahorny.github.io/JS/slick-slider.js "></script>
 
 </body>
 
