--- a/Calorie.html
+++ b/Calorie.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="Ilya-Nahorny.github.io/JS/SLICK/SLICK.CSS">
     <link rel="stylesheet" href="Ilya-Nahorny.github.io/JS/SLICK/slick-theme.css">
 
-    <title>index</title>
+    <title>Калорийность</title>
 
 </head>
 
