--- a/strip.html
+++ b/strip.html
@@ -35,7 +35,7 @@
                 <li><a href="Contacts.html" class="menu_link">Контакты</a></li>
             </ul>
         </nav>
-        <div class="main">
+        <div class="main main_strip">
             <div class="main-overlay"></div>
             <header>
                 <div class="logo">
