--- a/all_classes.html
+++ b/all_classes.html
@@ -38,7 +38,7 @@
                 <li><a href="Contacts.html" class="menu_link">Контакты</a></li>
             </ul>
         </nav>
-        <div class="main">
+        <div class="main main_all_classes">
             <div class="main-overlay"></div>
             <header>
                 <div class="logo">
