--- a/gallery.html
+++ b/gallery.html
@@ -37,7 +37,7 @@
                 <li><a href="Contacts.html" class="menu_link">Контакты</a></li>
             </ul>
         </nav>
-        <div class="main">
+        <div class="main main_gallery">
             <div class="main-overlay"></div>
             <header>
                 <div class="logo">
