--- a/gallery.html
+++ b/gallery.html
@@ -72,19 +72,19 @@
             <h2>наша работа</h2>
         </div>
         <div class="gallery">
-            <div><a data-fancybox="gallery" href="img/1.jpg" target="_blank"><img src="img/1.jpg" alt="photo"></a></div>
-            <div><a data-fancybox="gallery" href="img/2.jpg" target="_blank"><img src="img/2.jpg" alt="photo"></a></div>
-            <div><a data-fancybox="gallery" href="img/3.jpg" target="_blank"><img src="img/3.jpg" alt="photo"></a></div>
-            <div><a data-fancybox="gallery" href="img/4.jpg" target="_blank"><img src="img/4.jpg" alt="photo"></a></div>
-            <div><a data-fancybox="gallery" href="img/5.jpg" target="_blank"><img src="img/5.jpg" alt="photo"></a></div>
-            <div><a data-fancybox="gallery" href="img/6.jpg" target="_blank"><img src="img/6.jpg" alt="photo"></a></div>
-            <div><a data-fancybox="gallery" href="img/7.jpg" target="_blank"><img src="img/7.jpg" alt="photo"></a></div>
-            <div><a data-fancybox="gallery" href="img/8.jpg" target="_blank"><img src="img/8.jpg" alt="photo"></a></div>
-            <div><a data-fancybox="gallery" href="img/9.jpg" target="_blank"><img src="img/9.jpg" alt="photo"></a></div>
-            <div><a data-fancybox="gallery" href="img/10.jpg" target="_blank"><img src="img/10.jpg" alt="photo"></a></div>
-            <div><a data-fancybox="gallery" href="img/11.jpg" target="_blank"><img src="img/11.jpg" alt="photo"></a></div>
-            <div><a data-fancybox="gallery" href="img/12.jpg" target="_blank"><img src="img/12.jpg" alt="photo"></a></div>
-            <div><a data-fancybox="gallery" href="img/13.jpg" target="_blank"><img src="img/13.jpg" alt="photo"></a></div>
+            <div><a data-fancybox="gallery" href="IMG/1.JPG" target="_blank"><img src="IMG/1.JPG" alt="photo"></a></div>
+            <div><a data-fancybox="gallery" href="IMG/2.JPG" target="_blank"><img src="IMG/2.JPG" alt="photo"></a></div>
+            <div><a data-fancybox="gallery" href="IMG/3.JPG" target="_blank"><img src="IMG/3.JPG" alt="photo"></a></div>
+            <div><a data-fancybox="gallery" href="IMG/4.JPG" target="_blank"><img src="IMG/4.JPG" alt="photo"></a></div>
+            <div><a data-fancybox="gallery" href="IMG/5.JPG" target="_blank"><img src="IMG/5.JPG" alt="photo"></a></div>
+            <div><a data-fancybox="gallery" href="IMG/6.JPG" target="_blank"><img src="IMG/6.JPG" alt="photo"></a></div>
+            <div><a data-fancybox="gallery" href="IMG/7.JPG" target="_blank"><img src="IMG/7.JPG" alt="photo"></a></div>
+            <div><a data-fancybox="gallery" href="IMG/8.JPG" target="_blank"><img src="IMG/8.JPG" alt="photo"></a></div>
+            <div><a data-fancybox="gallery" href="IMG/9.JPG" target="_blank"><img src="IMG/9.JPG" alt="photo"></a></div>
+            <div><a data-fancybox="gallery" href="IMG/10.JPG" target="_blank"><img src="IMG/10.JPG" alt="photo"></a></div>
+            <div><a data-fancybox="gallery" href="IMG/11.JPG" target="_blank"><img src="IMG/11.JPG" alt="photo"></a></div>
+            <div><a data-fancybox="gallery" href="IMG/12.JPG" target="_blank"><img src="IMG/12.JPG" alt="photo"></a></div>
+            <div><a data-fancybox="gallery" href="IMG/13.JPG" target="_blank"><img src="IMG/13.JPG" alt="photo"></a></div>
         </div>
         
 
